fix: height for perspective

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -138,7 +138,7 @@
           </div>
         </vscode-panel-view>
 
-        <vscode-panel-view>
+        <vscode-panel-view style="height: 100%">
           <perspective-viewer
             :style="getPerspectiveStyles()"
             theme="Pro Dark"
