feat: default dark mode depends on current color

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -141,7 +141,7 @@
         <vscode-panel-view style="height: 100%">
           <perspective-viewer
             :style="getPerspectiveStyles()"
-            theme="Pro Dark"
+            :theme="getPerspectiveTheme()"
           ></perspective-viewer>
         </vscode-panel-view>
         <vscode-panel-view v-show="hasCode" id="view-2">
