--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -11,10 +11,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'none'; img-src __CSPSOURCE__ https:; style-src __CSPSOURCE__ 'unsafe-inline'; script-src 'strict-dynamic' 'unsafe-eval' 'nonce-__NONCE__';"
-    />
+    /> -->
 
     <title>Query Runner</title>
 
@@ -23,11 +23,27 @@
       {
         "imports": {
           "vue": "__ROOT__/assets/vue.esm-browser.prod.js",
-          "tabulator": "__ROOT__/assets/tabulator.min.js",
-          "prism": "__ROOT__/assets/prism.js"
+          "prism": "__ROOT__/assets/prism.js",
+          "perspective": "__ROOT__/assets/perspective.js",
+          "perspective-viewer": "__ROOT__/assets/perspective-viewer.js"
         }
       }
     </script>
+
+    <script
+      type="module"
+      src="__ROOT__/assets/perspective-viewer-datagrid.js"
+    ></script>
+    <script
+      type="module"
+      src="__ROOT__/assets/perspective-viewer-d3fc.js"
+    ></script>
+
+    <link
+      rel="stylesheet"
+      crossorigin="anonymous"
+      href="__ROOT__/assets/themes.css"
+    />
 
     <script
       nonce="__NONCE__"
@@ -35,11 +51,6 @@
       src="__ROOT__/assets/toolkit.min.js"
     ></script>
 
-    <link
-      nonce="__NONCE__"
-      rel="stylesheet"
-      href="__ROOT__/assets/tabulator.min.css"
-    />
     <link
       nonce="__NONCE__"
       rel="stylesheet"
@@ -72,43 +83,20 @@
         <vscode-panel-tab id="tab-3">
           {{ (hasData || hasError || isLoading) ? "Help" : "Welcome 🚀" }}
         </vscode-panel-tab>
+        <vscode-panel-tab id="tab-4" @click="onFeedback"
+          >Feedback</vscode-panel-tab
+        >
 
         <vscode-panel-view
+          style="height: 100%"
           v-show="(hasData || hasError || isLoading)"
           id="view-1"
         >
-          <img
-            v-if="isLoading"
-            id="spinner"
-            src="__ROOT__/assets/spinner.gif"
-          />
-
-          <div v-show="hasData">
-            <vscode-button
-              @click="copyResultsToClipboard"
-              style="margin-bottom: 4px"
-              >Copy Results</vscode-button
-            >
-            <vscode-button
-              @click="downloadAsCSV"
-              style="margin-left: 5px; margin-bottom: 4px"
-              >Download as CSV</vscode-button
-            >
-            <div id="query-results" :style="getTableStyles()"></div>
-          </div>
-
-          <div v-show="hasError">
-            <h3 class="error-title">{{ errorTitle }}</h3>
-            <h4>{{ errorMessage }}</h4>
-            <br />
-            <details>
-              <summary>View Detailed Error 🚨</summary>
-              <pre><code class="language-javascript" data-prismjs-copy="Copy Error" v-html="errorDataMarkup"></code></pre>
-            </details>
-            <br />
-          </div>
+          <perspective-viewer
+            :style="getPerspectiveStyles()"
+            :theme="getPerspectiveTheme()"
+          ></perspective-viewer>
         </vscode-panel-view>
-
         <vscode-panel-view v-show="hasCode" id="view-2">
           <div>
             <pre><code class="language-sql line-numbers" data-prismjs-copy="Copy SQL" v-html="compiledCodeMarkup"></code></pre>
@@ -155,6 +143,7 @@
             </p>
           </div>
         </vscode-panel-view>
+        <vscode-panel-view></vscode-panel-view>
       </vscode-panels>
     </div>
     <script nonce="__NONCE__" type="module" src="__ROOT__/main.js"></script>
