bring back old panel

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -23,6 +23,7 @@
       {
         "imports": {
           "vue": "__ROOT__/assets/vue.esm-browser.prod.js",
+          "tabulator": "__ROOT__/assets/tabulator.min.js",
           "prism": "__ROOT__/assets/prism.js",
           "perspective": "__ROOT__/assets/perspective.js",
           "perspective-viewer": "__ROOT__/assets/perspective-viewer.js"
@@ -50,7 +51,11 @@
       type="module"
       src="__ROOT__/assets/toolkit.min.js"
     ></script>
-
+    <link
+      nonce="__NONCE__"
+      rel="stylesheet"
+      href="__ROOT__/assets/tabulator.min.css"
+    />
     <link
       nonce="__NONCE__"
       rel="stylesheet"
@@ -88,14 +93,48 @@
         >
 
         <vscode-panel-view
-          style="height: 100%"
+          style="height: 100%; display: block"
           v-show="(hasData || hasError || isLoading)"
           id="view-1"
         >
-          <perspective-viewer
-            :style="getPerspectiveStyles()"
-            :theme="getPerspectiveTheme()"
-          ></perspective-viewer>
+          <div v-show="hasPerspective">
+            <perspective-viewer
+              :style="getPerspectiveStyles()"
+              :theme="getPerspectiveTheme()"
+            ></perspective-viewer>
+          </div>
+          <div v-show="!hasPerspective">
+            <img
+              v-if="isLoading"
+              id="spinner"
+              src="__ROOT__/assets/spinner.gif"
+            />
+
+            <div v-show="hasData" style="width: 100%">
+              <vscode-button
+                @click="copyResultsToClipboard"
+                style="margin-bottom: 4px"
+                >Copy Results</vscode-button
+              >
+              <vscode-button
+                @click="downloadAsCSV"
+                style="margin-left: 5px; margin-bottom: 4px"
+                >Download as CSV</vscode-button
+              >
+              <div id="query-results" :style="getTableStyles()"></div>
+            </div>
+
+            <div v-show="hasError">
+              <h3 class="error-title">{{ errorTitle }}</h3>
+              <h4>{{ errorMessage }}</h4>
+              <br />
+              <details>
+                <summary>View Detailed Error 🚨</summary>
+                <pre><code class="language-javascript" data-prismjs-copy="Copy Error" v-html="errorDataMarkup"></code></pre>
+              </details>
+              <br />
+            </div>
+          </div>
         </vscode-panel-view>
         <vscode-panel-view v-show="hasCode" id="view-2">
           <div>
