fix: query panel perspective height

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -108,7 +108,7 @@
           />
 
           <div v-show="hasData" style="width: 100%">
-            <div v-show="isPerspective" style="width: 100%">
+            <div v-show="isPerspective" style="width: 100%; height: 100%">
               <perspective-viewer
                 :style="getPerspectiveStyles()"
                 :theme="getPerspectiveTheme()"
