explanation instead of summary

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -83,7 +83,7 @@
 
         <vscode-panel-tab v-show="hasCode" id="tab-2"> SQL </vscode-panel-tab>
         <vscode-panel-tab v-show="hasSummary" id="tab-6">
-          Summary
+          Explanation
         </vscode-panel-tab>
 
         <vscode-panel-tab id="tab-3">
@@ -151,7 +151,7 @@
               DataPilot can try to explain the query
               <div style="display: flex; justify-content: flex-end">
                 <vscode-button @click="onGetSummary" style="margin-bottom: 4px"
-                  >Generate Summary</vscode-button
+                  >Generate Explanation</vscode-button
                 >
               </div>
             </div>
