feat: Query explanation (#686)
Co-authored-by: Michiel De Smet <mdesmet@gmail.com>

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -81,12 +81,14 @@
           >
         </vscode-panel-tab>
 
-        <vscode-panel-tab v-show="hasCode" id="tab-2">
-          Dispatched SQL
+        <vscode-panel-tab v-show="hasCode" id="tab-2"> SQL </vscode-panel-tab>
+        <vscode-panel-tab v-show="hasSummary" id="tab-6">
+          Explanation
         </vscode-panel-tab>
 
         <vscode-panel-tab id="tab-3">
-          {{ (hasData || hasError || isLoading) ? "Help" : "Welcome 🚀" }}
+          {{ (hasData || hasError || isLoading || hasSummary) ? "Help" :
+          "Welcome 🚀" }}
         </vscode-panel-tab>
         <vscode-panel-tab id="tab-4" v-show="hasData" @click="togglePerspective"
           >{{ isPerspective ? "Show legacy UI" : "Show new UI"
@@ -142,10 +144,21 @@
         </vscode-panel-view>
         <vscode-panel-view v-show="hasCode" id="view-2">
           <div>
-            <pre><code class="language-sql line-numbers" data-prismjs-copy="Copy SQL" v-html="compiledCodeMarkup"></code></pre>
+            <div>
+              <pre><code class="language-sql line-numbers" data-prismjs-copy="Copy SQL" v-html="compiledCodeMarkup"></code></pre>
+            </div>
+            <div v-show="!hasSummary && aiEnabled">
+              <p>DataPilot can explain what's the query is doing</p>
+              <vscode-button @click="onGetSummary">Explain query</vscode-button>
+            </div>
           </div>
         </vscode-panel-view>
-
+        <vscode-panel-view v-show="hasSummary" id="view-6">
+          <div>
+            <h2>Query Explanation</h2>
+            <p v-html="summary"></p>
+          </div>
+        </vscode-panel-view>
         <vscode-panel-view id="view-3">
           <div>
             <br />
