fix: text change

--- a/query_panel/index.html
+++ b/query_panel/index.html
@@ -148,7 +148,7 @@
               <pre><code class="language-sql line-numbers" data-prismjs-copy="Copy SQL" v-html="compiledCodeMarkup"></code></pre>
             </div>
             <div v-show="!hasSummary && aiEnabled">
-              <p>DataPilot can explain what's the query is doing</p>
+              <p>DataPilot can explain the query for you</p>
               <vscode-button @click="onGetSummary">Explain query</vscode-button>
             </div>
           </div>
