--- a/webview_panels/index.html
+++ b/webview_panels/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vscode DBT Power user extension</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500&display=swap");
+    </style>
   </head>
   <body>
     <div id="root"></div>
