--- a/new_lineage_panel/index.html
+++ b/new_lineage_panel/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <div id="sidebar"></div>
+    <div id="modal"></div>
     <script nonce="__NONCE__" type="module" src="/src/main.tsx"></script>
   </body>
 </html>
