fix: added alert notif

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -43,7 +43,8 @@
       <vscode-panel-view v-if="hasData">
         <section id="docs-form">
           <vscode-button @click="showBetaUX()" class="btn-new-ux"
-            >Show New UX (Beta)</vscode-button
+            >Click Here to Try New UX, Bulk Generation, and Multi-Language
+            Support!</vscode-button
           >
           <Documentation
             :ai-enabled="aiEnabled"
