fix: bell icon removed

--- a/docs_edit_panel/index.html
+++ b/docs_edit_panel/index.html
@@ -46,7 +46,7 @@
             Documentation editor has improved experience with new features like
             Bulk Generation, Multi-Language Support etc.
             <vscode-button @click="showBetaUX()" class="btn-new-ux"
-              ><span class="codicon codicon-bell"></span>Enable new experience
+              >Enable new experience
             </vscode-button>
           </div>
 
